Got basic Login working.

--- a/Django/templates/main.html
+++ b/Django/templates/main.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Reciminder</title>
 </head>
 <body>
-<h1> Welcome to Reciminder!</h1>
-<p>Project is still in work.</p>
+{% block content %}
+
+{% endblock %}
 </body>
 </html>
