--- a/Django/recipe/templates/add-recipe.html
+++ b/Django/recipe/templates/add-recipe.html
@@ -1,5 +1,15 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <p> Here you will be able to add recipes.</p>
+    <h1>Add a Recipe!</h1>
+    <br>
+    <form method="POST" action="">
+    {% csrf_token %}
+    {% for field in form %}
+        {{ field.label }}
+        {{ field }}<br>
+    {% endfor %}
+    <input type="submit" value="Submit">
+    </form>
+
 {% endblock content %}
