First experiments with some very basic formatting

--- a/Django/landingpages/templates/landing_page.html
+++ b/Django/landingpages/templates/landing_page.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <h1> Welcome to Reciminder!</h1>
-    <p>Project is still in work.</p>
-    <a href="{% url 'login' %}">Click here to get started.</a>
+    <h1 class="centertext"> Welcome to Reciminder!</h1>
+    <p class="centertext">Project is still in work.</p>
+    <p class="centertext"><a href="{% url 'login' %}">Click here to get started.</a><p>
 {% endblock content %}
