--- a/Django/recipe/templates/add-recipe.html
+++ b/Django/recipe/templates/add-recipe.html
@@ -1,6 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
+    <div class="half main_center">
     <h1>Add a Recipe!</h1>
     <br>
     <form method="POST" action="">
@@ -11,5 +12,5 @@
     {% endfor %}
     <input type="submit" value="Submit">
     </form>
-
+    </div>
 {% endblock content %}
