--- a/Django/landingpages/templates/logged_in_temp.html
+++ b/Django/landingpages/templates/logged_in_temp.html
@@ -1,13 +1,15 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <h1> Welcome to Reciminder!</h1>
-    <h3> You are logged in as {{ user.username }}!</h3>
-    <p>There's Still Nothing here.</p>
-    <p>UserFirstName: {{ user.first_name }}</p>
-    <a href="{% url 'add-recipe' %}">Click here to add a recipe.</a>
-
+    <div class="flex one">
+    <h1 class="centertext"> Welcome to Reciminder!</h1>
+    <h3 class="centertext"> You are logged in as {{ user.username }}!</h3>
+    <p class="centertext">There's Still Nothing here.</p>
+    <p class="centertext">UserFirstName: {{ user.first_name }}</p>
+    <p class="centertext"><a href="{% url 'add-recipe' %}">Click here to add a recipe.</a></p>
+    </div>
     <br>
+    <div class="main_center flex one two-800  three-1200">
     {% for recipe in recipes %}
         <div>
             <h4>{{ recipe.title }}</h4>
@@ -17,4 +19,5 @@
             <p>Serves: {{ recipe.servings_per_nominal }}</p>
         </div>
     {% endfor %}
+    </div>
 {% endblock content %}
