This commit implements Feature #1. URL Field has been added to Recipe

--- a/Django/landingpages/templates/logged_in_temp.html
+++ b/Django/landingpages/templates/logged_in_temp.html
@@ -15,6 +15,9 @@
             <h4>{{ recipe.title }}</h4>
             <p>{{ recipe.description_free_text|linebreaksbr  }}</p>
             <p>{{ recipe.ingredients_free_text|linebreaksbr  }}</p>
+            {% if recipe.original_website_link %}
+                <p><a href="{{ recipe.original_website_link }}">Original Recipe Link</a></p>
+            {% endif %}
             <p>{{ recipe.instructions_free_text|linebreaksbr }}</p>
             <p>Serves: {{ recipe.servings_per_nominal }}</p>
         </div>
