--- a/Django/templates/main.html
+++ b/Django/templates/main.html
@@ -14,6 +14,11 @@
             margin: auto;
             width: 90%;
         }
+        .recipe-card{
+            margin: 10px;
+            padding: 5px;
+            max-width: 400px;
+        }
         .centertext{
             text-align: center;
         }
