--- a/Django/recipe/templates/Individual_recipe.html
+++ b/Django/recipe/templates/Individual_recipe.html
@@ -4,6 +4,7 @@
     <div class="flex one">
     <h1 class="centertext"> Welcome to Reciminder!</h1>
     <p class="centertext"><a href="{% url 'home' %}">Back to All Recipes.</a></p>
+    <p><a href="{% url 'edit-recipe' recipe.id %}">Click here to edit the recipe.</a></p>
     </div>
     <br>
     <div class="main_center">
