Users can now delete recipes. This implements feature #4

--- a/Django/templates/main.html
+++ b/Django/templates/main.html
@@ -22,6 +22,9 @@
         .centertext{
             text-align: center;
         }
+        .danger-align{
+            float: right;
+        }
 
     </style>
 </head>
