--- a/Django/recipe/templates/Individual_recipe.html
+++ b/Django/recipe/templates/Individual_recipe.html
@@ -4,7 +4,31 @@
     <div class="flex one">
     <h1 class="centertext"> Welcome to Reciminder!</h1>
     <p class="centertext"><a href="{% url 'home' %}">Back to All Recipes.</a></p>
-    <p><a href="{% url 'edit-recipe' recipe.id %}">Click here to edit the recipe.</a></p>
+    <p>
+        <a href="{% url 'edit-recipe' recipe.id %}"><label class="button">Click here to edit the recipe.</label></a>
+        &nbsp;&nbsp;&nbsp;
+        <label for="modal_1" class="button warning">Delete Recipe</label>
+        <div class="modal">
+          <input id="modal_1" type="checkbox" />
+          <label for="modal_1" class="overlay"></label>
+          <article>
+            <header>
+              <h3>Delete this Recipe?</h3>
+              <label for="modal_1" class="close">&times;</label>
+            </header>
+            <section class="content">
+              Are you sure you want to delete this recipe? - This action cannot be undone.
+            </section>
+            <footer>
+              <a class="button error" href="{% url 'delete-recipe' recipe.id %}">DELETE RECIPE</a>
+              <label for="modal_1" class="button danger-align">
+                Cancel
+              </label>
+            </footer>
+          </article>
+        </div>
+
+    </p>
     </div>
     <br>
     <div class="main_center">
