--- a/Django/templates/main.html
+++ b/Django/templates/main.html
@@ -29,7 +29,14 @@
     </style>
 </head>
 <body>
-<nav class="nav"><h3>This Would Be the Navbar</h3></nav>
+<nav class="nav">
+    <a class="brand" href=""><span>Reciminder</span></a>
+    {% if request.user.is_authenticated %}
+        <a class="button danger-align" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a class="button danger-align" href="#">Login</a>
+    {% endif %}
+</nav>
 <div class="header flex">
     <h1 class="centertext">Then a Header?</h1>
 </div>
