Basic Search implemented. Feature #6.

--- a/Django/templates/main.html
+++ b/Django/templates/main.html
@@ -44,6 +44,11 @@
             margin: 10px;
             max-width: 50px;
         }
+        .recipe-search{
+            margin: auto;
+            width: 90%;
+            max-width: 1000px;
+        }
 
     </style>
 </head>
