--- a/Django/templates/main.html
+++ b/Django/templates/main.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 <nav class="nav">
-    <a class="brand" href=""><span>Reciminder</span></a>
+    <a class="brand" href="{% url 'index' %}"><span>Reciminder</span></a>
     {% if request.user.is_authenticated %}
         <a class="button danger-align" href="{% url 'logout' %}">Logout</a>
     {% else %}
